--- a/style.css
+++ b/style.css
@@ -22,8 +22,21 @@ a {
 	text-decoration: none;
 }
 
+li {
+	list-style: none;
+}
+
 .tac {
 	text-align: center;
+}
+
+.go-back {
+	position: absolute;
+	left: 1.5rem;
+	top: 1.5rem;
+	color: #A5A5AE;
+	text-decoration: none;
+	font-size: 1.5rem;
 }
 
 #wraper {
@@ -61,6 +74,7 @@ a {
 
 /*BTNS*/
 .btn {
+	-webkit-user-select: none;
 	color: #ffffff;
 	font-size: 38px;
 	font-weight: 400;
@@ -105,7 +119,8 @@ a {
 	background-image: url(img/friends.png);
 }
 
-.view-choose {
+.view-choose,
+.view-lottery {
 	display: flex;
 	flex-direction: column;
 	color: #FFF;
@@ -159,4 +174,21 @@ a {
 .view-choose .btn-box img {
 	width: 11.6rem;
 	height: 3.2rem;
+}
+
+.view-lottery .person-box {
+	flex: 1;
+}
+
+.view-lottery .prize-box {
+	margin: 0;
+	padding: 0 1.0rem;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.view-lottery .prize-box li {
+	flex: 1;
+	align-items: center;
 }
