--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ li {
 	height: 100%;
 	background-image: url(img/bg.jpg);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100% 100%;
 }
 
 .entry-box {
